[gd_scene load_steps=14 format=3 uid="uid://cnsskt2dhlx1k"]

[ext_resource type="Script" path="res://Scripts/pregunta_completa.gd" id="1_f8jgy"]
[ext_resource type="Texture2D" uid="uid://gl8sus00ymdj" path="res://img/fondo_principal3.jpg" id="1_ji7k7"]
[ext_resource type="PackedScene" uid="uid://dxmaohffffinq" path="res://componentes/barra_titulo.tscn" id="2_pp13u"]
[ext_resource type="Texture2D" uid="uid://b6a4j75htkmo4" path="res://img/person_pensando.jpeg" id="3_bga7k"]
[ext_resource type="FontFile" uid="uid://doo5wq3dunosb" path="res://font/SofadiOne-Regular.ttf" id="4_qiomp"]
[ext_resource type="StyleBox" uid="uid://2jtjkqs8fwxq" path="res://styles/btn_normal.tres" id="5_mejv2"]
[ext_resource type="StyleBox" uid="uid://h6bgr3hde3fm" path="res://styles/btn_hover.tres" id="6_07itb"]
[ext_resource type="Texture2D" uid="uid://bxariys7jocnk" path="res://img/sol.png" id="8_bceyr"]
[ext_resource type="PackedScene" uid="uid://dpmns86toab2w" path="res://componentes/ventana_felicidades.tscn" id="9_r643r"]
[ext_resource type="AudioStream" uid="uid://cdv3d5ajahl4m" path="res://sonido/click_letras.mp3" id="10_20x3q"]
[ext_resource type="AudioStream" uid="uid://x1nauk5p4jxp" path="res://sonido/hambiental.mp3" id="11_7plk2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16qs3"]
bg_color = Color(1, 1, 0.960784, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2q8s"]
bg_color = Color(1, 1, 0.960784, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="pregunta_completa" type="Node2D"]
script = ExtResource("1_f8jgy")

[node name="FondoPrincipal3" type="Sprite2D" parent="."]
position = Vector2(263.75, 467.751)
scale = Vector2(0.715353, 0.715353)
texture = ExtResource("1_ji7k7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 430.0
offset_bottom = 933.0

[node name="imagen" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -246.5
offset_right = 163.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_16qs3")

[node name="fondo_respuesta" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -163.0
offset_top = -319.0
offset_right = 164.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_16qs3")

[node name="PersonPensando" type="Sprite2D" parent="Control/fondo_respuesta"]
position = Vector2(161.817, 135.382)
scale = Vector2(0.358725, 0.358725)
texture = ExtResource("3_bga7k")

[node name="Button" type="Button" parent="Control/fondo_respuesta"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -49.0
offset_right = 62.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_qiomp")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("6_07itb")
theme_override_styles/hover = ExtResource("6_07itb")
theme_override_styles/pressed = ExtResource("6_07itb")
theme_override_styles/normal = ExtResource("5_mejv2")
text = "GUARDAR"

[node name="pregunta" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 91.0
offset_right = 200.0
offset_bottom = 210.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qiomp")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_16qs3")
text = "Doy calorcito, soy muy redondo,salgo tempranito, y por la tarde me escondo."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="respuesta2" type="TextEdit" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = 59.5
offset_right = 20.5
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qiomp")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_r2q8s")
placeholder_text = "
"
autowrap_mode = 1

[node name="respuesta3" type="TextEdit" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = 59.5
offset_right = 83.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qiomp")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_r2q8s")
placeholder_text = "
"
autowrap_mode = 1

[node name="respuesta1" type="TextEdit" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = 59.5
offset_right = -41.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qiomp")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_r2q8s")
placeholder_text = "
"
autowrap_mode = 1

[node name="barra_titulo" parent="." instance=ExtResource("2_pp13u")]

[node name="Sol" type="Sprite2D" parent="."]
modulate = Color(0.0235294, 0.0235294, 0.0235294, 1)
position = Vector2(216.414, 355.625)
scale = Vector2(0.551031, 0.551031)
texture = ExtResource("8_bceyr")

[node name="ventana_felicidades" parent="." instance=ExtResource("9_r643r")]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerColor" type="Timer" parent="."]
wait_time = 2.0

[node name="boton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_20x3q")

[node name="hambiente" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_7plk2")
autoplay = true

[connection signal="pressed" from="Control/fondo_respuesta/Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="Control/respuesta2" to="." method="_on_respuesta_text_changed" binds= ["2"]]
[connection signal="text_changed" from="Control/respuesta3" to="." method="_on_respuesta_text_changed" binds= ["3"]]
[connection signal="text_changed" from="Control/respuesta1" to="." method="_on_respuesta_text_changed" binds= ["1"]]
[connection signal="finished" from="hambiente" to="." method="_on_hambiente_finished"]
